dynamic type in credentials screen

--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -39,9 +39,9 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Kanji Koohii credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxz-Z0-daI">
-                    <rect key="frame" x="58" y="40" width="259.5" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Kanji Koohii credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxz-Z0-daI">
+                    <rect key="frame" x="51.5" y="40" width="272.5" height="20.5"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -51,17 +51,17 @@
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="wa0-BA-FF7">
                             <rect key="frame" x="0.0" y="0.0" width="250" height="212"/>
                             <subviews>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgE-1E-d3C">
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgE-1E-d3C">
                                     <rect key="frame" x="0.0" y="0.0" width="250" height="44"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="lnf-pF-H2I"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GCW-cT-lfx">
+                                <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GCW-cT-lfx">
                                     <rect key="frame" x="0.0" y="56" width="250" height="44"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="FPF-UQ-X5b"/>
@@ -70,9 +70,9 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DIM-fk-1bX">
                                     <rect key="frame" x="0.0" y="112" width="250" height="44"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="remember login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slj-qM-lAt">
-                                            <rect key="frame" x="20" y="12.5" width="120" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="remember login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slj-qM-lAt">
+                                            <rect key="frame" x="20" y="13" width="107.5" height="18"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -98,6 +98,8 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aI-wY-QJu" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="168" width="250" height="44"/>
                                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                    <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                     <state key="normal" title="Login"/>
                                     <connections>
                                         <action selector="loginPressed:" destination="-1" eventType="touchUpInside" id="vBf-re-bSY"/>
@@ -123,10 +125,11 @@
                         <constraint firstAttribute="bottom" secondItem="wa0-BA-FF7" secondAttribute="bottom" id="bN5-KZ-7NI"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                    <rect key="frame" x="62" y="312" width="250" height="32"/>
+                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="900" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
+                    <rect key="frame" x="52.5" y="312" width="269" height="38"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                    <inset key="contentEdgeInsets" minX="30" minY="10" maxX="30" maxY="10"/>
                     <state key="normal" title="Sign Up for free at Kanji Koohii">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -135,9 +138,11 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQs-b2-eXE" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                    <rect key="frame" x="62" y="364" width="250" height="34"/>
+                    <rect key="frame" x="62" y="370" width="250" height="38"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <accessibility key="accessibilityConfiguration" identifier="enterGuest"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                    <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                     <state key="normal" title="Enter as Guest">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -149,13 +154,13 @@
             <color key="backgroundColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="TQs-b2-eXE" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4YE-6Z-5DX"/>
-                <constraint firstItem="pNb-6v-x7W" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" id="DKN-2h-bya"/>
-                <constraint firstItem="TQs-b2-eXE" firstAttribute="width" secondItem="pNb-6v-x7W" secondAttribute="width" id="Fcx-KP-GIH"/>
+                <constraint firstItem="pNb-6v-x7W" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" priority="750" id="DKN-2h-bya"/>
                 <constraint firstItem="h6g-Ix-9mH" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HYp-X8-FXk"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="top" secondItem="h6g-Ix-9mH" secondAttribute="bottom" constant="31" id="Lbd-9J-A5X"/>
                 <constraint firstItem="XWx-SD-x5n" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PGi-Wz-9F3"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" id="Pml-Yu-F2V"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="S7u-KN-6Xx"/>
+                <constraint firstItem="TQs-b2-eXE" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" id="UhV-aZ-WGW"/>
                 <constraint firstItem="pNb-6v-x7W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="boQ-o8-4fh"/>
                 <constraint firstItem="TQs-b2-eXE" firstAttribute="top" secondItem="pNb-6v-x7W" secondAttribute="bottom" constant="20" id="hhi-oN-gwE"/>
                 <constraint firstItem="Sxz-Z0-daI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iSs-MZ-K9x"/>
